--- a/demo/res/layout/activity_pit_survey.xml
+++ b/demo/res/layout/activity_pit_survey.xml
@@ -142,11 +142,11 @@
             android:layout_width="113dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
-            android:text="Proposed Joint ID"
+            android:text="Proposed Joint"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView20"
-            android:layout_marginStart="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
         <Spinner
             android:id="@+id/joint_id_spinner"
