--- a/demo/res/layout/fragment_survey.xml
+++ b/demo/res/layout/fragment_survey.xml
@@ -25,24 +25,26 @@
             android:layout_marginTop="46dp"
             android:fontFamily="serif-monospace"
             android:text="UG/Aerial"
+            android:textStyle="bold"
             android:theme="@style/MyButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/fibereqpbutton"
-            android:layout_width="105dp"
+            android:layout_width="110dp"
             android:layout_height="59dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="46dp"
             android:fontFamily="serif-monospace"
             android:text="Fiber Equipment"
+            android:textStyle="bold"
             android:theme="@style/MyButton"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/coppereqpbutton"
@@ -51,15 +53,16 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="0dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="46dp"
             android:fontFamily="serif-monospace"
             android:text="Copper Equipment"
+            android:textStyle="bold"
             android:theme="@style/MyButton"
-            app:layout_constraintRight_toLeftOf="@+id/fibereqpbutton"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/ugbutton"
-            android:layout_marginLeft="0dp" />
+            app:layout_constraintRight_toLeftOf="@+id/fibereqpbutton"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView"
@@ -94,16 +97,17 @@
             android:id="@+id/survey_submitbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="82dp"
             android:fontFamily="serif-monospace"
             android:text="SUBMIT"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/survey_samcodetext"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
