--- a/demo/res/layout/details_view.xml
+++ b/demo/res/layout/details_view.xml
@@ -30,11 +30,6 @@
             android:layout_marginBottom="41dp"
             app:layout_constraintHorizontal_bias="1.0">
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/acc_green_logo_resized" />
         </FrameLayout>
 
         <TextView
@@ -280,33 +275,49 @@
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
-        <RadioButton
-            android:id="@+id/radioButtonYes"
+        <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="Yes"
-            app:layout_constraintHorizontal_bias="0.219"
+            android:orientation="horizontal"
             app:layout_constraintLeft_toRightOf="@+id/textView13"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-
-        <RadioButton
-            android:id="@+id/radioButtonNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:text="No"
-            app:layout_constraintHorizontal_bias="0.536"
-            app:layout_constraintLeft_toRightOf="@+id/radioButtonYes"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="9dp"
+            app:layout_constraintTop_toBottomOf="@+id/cableDiameterText">
+
+            <RadioButton
+                android:id="@+id/radioButtonYes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:text="Yes"
+                app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
+                app:layout_constraintHorizontal_bias="0.219"
+                app:layout_constraintLeft_toRightOf="@+id/textView13"
+                app:layout_constraintRight_toRightOf="parent" />
+
+            <RadioButton
+                android:id="@+id/radioButtonNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:text="No"
+                app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
+                app:layout_constraintHorizontal_bias="0.536"
+                app:layout_constraintLeft_toRightOf="@+id/radioButtonYes"
+                app:layout_constraintRight_toRightOf="parent" />
+
+        </RadioGroup>
 
         <TextView
             android:id="@+id/textView15"
