--- a/demo/res/layout/details_view.xml
+++ b/demo/res/layout/details_view.xml
@@ -277,6 +277,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
         <RadioGroup
+            android:id="@+id/radioDecission"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
