--- a/demo/res/values/colors.xml
+++ b/demo/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-        <color name="colorPrimary">#3ebae5</color>
-        <color name="colorPrimaryDark">#3ebae5</color>
-        <color name="textColorPrimary">#FFFFFF</color>
+        <color name="colorPrimary">#d60404</color>
+        <color name="colorPrimaryDark">#d60404</color>
+        <color name="textColorPrimary">#ffffff</color>
         <color name="windowBackground">#FFFFFF</color>
         <color name="navigationBarColor">#000000</color>
         <color name="colorAccent">#c8e8ff</color>
