--- a/demo/res/layout/activity_capture_image_pit.xml
+++ b/demo/res/layout/activity_capture_image_pit.xml
@@ -39,6 +39,19 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+        <ImageButton
+            android:id="@+id/btnSpeak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/ic_mic"
+            android:layout_marginLeft="28dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="51dp"
+            app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton"
+            app:layout_constraintRight_toLeftOf="@+id/imageView"
+            android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.121" />
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="127dp"
@@ -49,19 +62,20 @@
             android:src="@drawable/infalogo"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton" />
+
         <GridView
             android:id="@+id/gridView1"
             android:layout_width="244dp"
             android:layout_height="265dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/imageView1"
-            android:layout_marginLeft="26dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/fibereqpbutton"
+            android:layout_marginLeft="26dp"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/fibereqpbutton"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.538" />
+            app:layout_constraintLeft_toRightOf="@+id/imageView1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.573" />
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
