--- a/demo/res/layout/fragment_maintenance.xml
+++ b/demo/res/layout/fragment_maintenance.xml
@@ -54,16 +54,16 @@
             android:layout_marginTop="33dp" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/nlpButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/brain"
-            android:background="@null"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="99dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
+            android:background="@null"
+            android:src="@drawable/brain"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/eqp_upkeep_img_button"
             app:layout_constraintVertical_bias="1.0" />
 
