--- a/demo/res/layout/activity_construction.xml
+++ b/demo/res/layout/activity_construction.xml
@@ -15,12 +15,12 @@
         tools:layout="@layout/activity_construction">
         <ImageButton
             android:id="@+id/home_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center|bottom"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_gravity="left|top"
             android:padding="50dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="55dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/home"
             />
 
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start|top"
             android:padding="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:src="@drawable/layers_icon"
             />
@@ -39,12 +39,23 @@
             android:id="@+id/information_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
+            android:layout_gravity="left|top"
             android:padding="10dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/rsz_information_icon"
             />
+        <ImageButton
+            android:id="@+id/btnSpeak"
+            android:layout_gravity="left|top"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:layout_marginLeft="145dp"
+            android:layout_marginTop="22dp"
+            android:background="@null"
+            android:src="@drawable/brain"
+             />
 
     </fragment>
 
