--- a/demo/res/layout/fragment_construction.xml
+++ b/demo/res/layout/fragment_construction.xml
@@ -27,21 +27,25 @@
             android:typeface="serif"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/survey_samcodetext"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/construction_samcodetext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="0dp"
             android:ems="10"
+            android:text="3KGP-01"
             android:fontFamily="serif-monospace"
             android:hint="e.g. 3SAM-01"
             android:inputType="textPersonName"
             android:singleLine="true"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="122dp"
+            app:layout_constraintLeft_toRightOf="@+id/textView"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintHorizontal_bias="0.807" />
 
         <Button
             android:id="@+id/construction_submitbtn"
@@ -66,7 +70,7 @@
             android:layout_height="93dp"
             app:srcCompat="@drawable/infalogo"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="114dp"
+            android:layout_marginBottom="116dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
@@ -85,7 +89,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/construction_submitbtn"
-            app:layout_constraintVertical_bias="0.44" />
+            app:layout_constraintVertical_bias="0.458" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
