--- a/demo/res/layout/activity_capture_image_pit.xml
+++ b/demo/res/layout/activity_capture_image_pit.xml
@@ -56,13 +56,29 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton" />
+        <ImageButton
+            android:id="@+id/home_button"
+            android:layout_width="53dp"
+            android:layout_height="61dp"
+            android:padding="50dp"
+            android:src="@drawable/home"
+            app:layout_constraintRight_toLeftOf="@+id/imageView"
+            android:layout_marginRight="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/btnSpeak"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="57dp"
+            app:layout_constraintHorizontal_bias="0.58"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="127dp"
             android:layout_height="85dp"
             android:layout_marginEnd="33dp"
-            android:layout_marginRight="33dp"
+            android:layout_marginRight="28dp"
             android:layout_marginTop="37dp"
             android:src="@drawable/infalogo"
             app:layout_constraintRight_toRightOf="parent"
