--- a/demo/res/layout/fragment_construction.xml
+++ b/demo/res/layout/fragment_construction.xml
@@ -3,93 +3,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.maps.android.utils.activity.SurveyFragment"
+    tools:context="com.google.maps.android.utils.activity.MaintenanceFragment"
     android:background="@drawable/background_2">
-
-    <!-- TODO: Update blank fragment layout -->
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="136dp"
-            android:fontFamily="serif-monospace"
-            android:text="Area Code"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:typeface="serif"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/construction_samcodetext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="0dp"
-            android:ems="10"
-            android:text="3KGP-01"
-            android:fontFamily="serif-monospace"
-            android:hint="e.g. 3SAM-01"
-            android:inputType="textPersonName"
-            android:singleLine="true"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="122dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintHorizontal_bias="0.807" />
-
-        <Button
-            android:id="@+id/construction_submitbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="93dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:fontFamily="serif-monospace"
-            android:text="SUBMIT"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/imageView3"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/construction_samcodetext"
-            app:layout_constraintVertical_bias="1.0" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="93dp"
             android:layout_height="93dp"
-            app:srcCompat="@drawable/infalogo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="116dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="81dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.97"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.97" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@drawable/infalogo" />
+
+        <ImageButton
+            android:id="@+id/view_design_img_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@drawable/rsz_equipment_upkeep_final"
+            android:layout_marginTop="0dp"
+            android:elevation="20dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/construction_img_button" />
+
+        <ImageButton
+            android:id="@+id/construction_img_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:elevation="20dp"
+            android:background="@null"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@drawable/rsz_fault_remediation_final"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="33dp" />
 
         <ImageButton
             android:id="@+id/nlpButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="99dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:background="@null"
             android:src="@drawable/brain"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/construction_submitbtn"
-            app:layout_constraintVertical_bias="0.458" />
+            app:layout_constraintTop_toBottomOf="@+id/view_design_img_button"
+            app:layout_constraintVertical_bias="1.0" />
+
     </android.support.constraint.ConstraintLayout>
+
 
 </RelativeLayout>
