--- a/demo/res/layout/activity_image_list.xml
+++ b/demo/res/layout/activity_image_list.xml
@@ -1,33 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.google.maps.android.utils.activity.ImageListActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:weightSum="1"
+    android:baselineAligned="false"
+    android:orientation="vertical"
+    android:background="@drawable/background_2">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/MyMaterialTheme.Base.AppBarOverlay">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/MyMaterialTheme.Base.PopupOverlay" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="312dp"
+            android:layout_height="350dp"
+            android:layout_marginEnd="33dp"
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="31dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/nextbutton"
+            app:layout_constraintVertical_bias="0.456"
+            tools:layout_editor_absoluteX="41dp" />
+        <Button
+            android:id="@+id/nextbutton"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Save"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="72dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="77dp" />
+        <Button
+            android:id="@+id/Savebutton"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Edit"
+            android:layout_marginLeft="56dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/nextbutton"
+            android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.035"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="77dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintVertical_bias="1.0" />
 
-    </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_image_list" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
-</android.support.design.widget.CoordinatorLayout>
+    </android.support.constraint.ConstraintLayout>
+</LinearLayout>
