--- a/demo/res/layout/activity_image_list.xml
+++ b/demo/res/layout/activity_image_list.xml
@@ -15,39 +15,34 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="312dp"
-            android:layout_height="350dp"
+            android:layout_width="336dp"
+            android:layout_height="402dp"
             android:layout_marginEnd="33dp"
-            android:layout_marginTop="25dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="31dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/nextbutton"
-            app:layout_constraintVertical_bias="0.456"
-            tools:layout_editor_absoluteX="41dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp" />
+
         <Button
-            android:id="@+id/nextbutton"
+            android:id="@+id/savebutton"
             android:layout_width="100dp"
             android:layout_height="50dp"
+            android:layout_marginLeft="68dp"
+            android:layout_marginRight="8dp"
             android:text="Save"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="72dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="77dp" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/editbutton"
+            app:layout_constraintHorizontal_bias="0.153"
+            app:layout_constraintLeft_toRightOf="@+id/editbutton"
+            app:layout_constraintRight_toRightOf="parent" />
         <Button
-            android:id="@+id/Savebutton"
+            android:id="@+id/editbutton"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:text="Edit"
             android:layout_marginLeft="56dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/nextbutton"
-            android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.035"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="77dp"
             android:layout_marginTop="8dp"
